Mobile horizontal scrolling issue

--- a/css/steemitpond.css
+++ b/css/steemitpond.css
@@ -15,6 +15,12 @@ body {
     overflow: hidden;
 }
 
+#steemit-pond {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 /*--------------------------*
  * Header styling           *
  *--------------------------*/
